# mowito_assignment

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/image_processing/lib/image_processing/: image_conversion.py
install/image_processing/share/image_processing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/image_processing/share/image_processing/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_image_processing__rosidl_generator_cExport.cmake  export_image_processing__rosidl_generator_pyExport.cmake  export_image_processing__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_image_processing__rosidl_typesupport_fastrtps_cExport.cmake  image_processingConfig-version.cmake  image_processingConfig.cmake  image_processing__rosidl_typesupport_cExport-noconfig.cmake  image_processing__rosidl_typesupport_cppExport.cmake  image_processing__rosidl_typesupport_introspection_cExport-noconfig.cmake  image_processing__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  (+2 more)
log/: latest_build
src/image_processing/: CMakeLists.txt  README.md  package.xml
src/image_processing/launch/: image_processing.launch.py
src/image_processing/scripts/: image_conversion.py
src/image_processing/srv/: Conversion.srv
(+40 files in other folders)
